# evalforge

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: evalforge-ci.yml
benchmarks/: run_all.py
benchmarks/results/: baseline.json
evalforge/: __init__.py  core.py  pytest_plugin.py  regression_gate.py  runner.py
evalforge/datasets/: __init__.py  loaders.py
evalforge/judges/: __init__.py  anthropic_judge.py  base.py  mock.py  openai_judge.py
evalforge/metrics/: __init__.py  answer_relevance.py  base.py  faithfulness.py  groundedness.py  hallucination.py
examples/: basic_rag_eval.py
tests/: conftest.py  test_core.py  test_judges.py  test_metrics.py  test_regression_gate.py  test_runner.py
